Refactor inventory creation to use PetInventoryHolder (#51)
* Refactor inventory creation to use PetInventoryHolder

Replaces direct Bukkit.createInventory calls with PetInventoryHolder for all inventory creation, improving consistency and enabling custom inventory handling. Updates listeners to check for PetInventory instances instead of relying on inventory titles.

* Add @NotNull annotation to identifier parameter

Annotated the 'identifier' parameter in onPlaceholderRequest with @NotNull to improve null-safety and clarify expected usage.

* Remove unused Bukkit imports from inventory classes

Cleaned up imports in CategoriesMenu, PetInteractionMenu, PetInventory, and PetMenu by removing unused references to org.bukkit.Bukkit.

* Refactor inventory checks to use PetInventoryHolder

Replaces instanceof PetInventory checks with checks for PetInventoryHolder as the inventory holder in all relevant listeners. Also simplifies PetMenu pagination logic and updates category check to use isEmpty(). This improves type safety and consistency in inventory event handling.

* Fix typo in PetMenu comment

Corrected 'gotta' to 'have to' in a comment for clarity and professionalism.

* Update Java version to 21 in Maven compiler plugin

Changed the maven-compiler-plugin configuration in pom.xml to use Java 21 for both source and target versions, upgrading from Java 11.

* Refactor tab completion logic for MCPets commands

Simplifies tab completion by merging cases, using Java 16+ stream .toList() instead of .collect(Collectors.toList()), and adds filtering of suggestions based on current input. Also updates command argument handling for more consistent behavior.

* Refactor metadata access in fromCurrentView method

Replaced usage of get(0) and size() with getFirst() and isEmpty() for accessing player metadata in PetInventory.fromCurrentView. This improves code readability and consistency with modern collection handling.

* Refactor list access to use getLast() and toList()

Repl